# embodied-gemini

./: .env.example  .gitignore  .mcp.example.json  AGENTS.md  GEMINI.md  LICENSE  README-ja.md  README.md  autonomous-action.sample.sh  autonomous-mcp.json.example  desires.sample.conf  mcpBehavior.toml  schedule.sample.conf  test-autonomous.sh  test_capture.py
.gemini/: hooks.json  settings.example.json
.gemini/commands/: awake.md  observe.md  sleep.md
.gemini/hooks/: com.embodied-gemini.heartbeat.plist  continue-check.sh  continuity-daemon.sh  hearing-daemon.py  hearing-hook.sh  hearing-stop-hook.sh  heartbeat-daemon.sh  interoception.sh  post-compact-recovery.sh  statusline.ts  user-prompt-submit-interoception.sh
.github/workflows/: ci.yml
desire-system/: .env.example  desire_updater.py  pyproject.toml  server.py
docs/: attention-control-model.md
memory-mcp/: .env.example  README.md  pyproject.toml
memory-mcp/scripts/: merge_memories.py  migrate_chroma_to_sqlite.py  migrate_embeddings.py
mobility-mcp/: pyproject.toml
morning-call-mcp/: pyproject.toml
scripts/: attention-lib.ts  attention-state.ts  companion-biometrics-ingest.py  continuity-daemon.test.ts  continuity-daemon.ts  continuity-record.sh  desire-tick.ts  fetch-garmin-companion-biometrics.py  install-mcps.sh  interoception.ts  test_companion_biometrics_ingest.py
sociality-mcp/: README.md  pyproject.toml
tts-mcp/: .env.example  pyproject.toml
wifi-cam-mcp/: README.md  pyproject.toml
x-mcp/: .env.example  README.md  pyproject.toml
x-mcp/src/x_mcp/: server.py
(+34 files in other folders)
